# Webull-SDK

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh  settings.gradle.kts  src.txt
app/: build.gradle.kts
app/src/main/java/webull/trading/bot/: Application.java  Application_old.java
app/src/main/java/webull/trading/bot/commands/: Trading.java
app/src/main/java/webull/trading/bot/user/: User.java
app/src/test/java/webull/trading/bot/: AppTest.java
docs/: documentation.md  llms.txt
examples/: CMakeLists.txt
examples/src/: main.cpp
examples/src/core/: application.cpp  application.hpp
include/client/: market.hpp  trading.hpp
include/core/: credentials.hpp  curl_pool.hpp  secret.hpp  token.hpp
include/data/: data.hpp
include/utilities/: cryptography.hpp  http.hpp  json.hpp  openapi.hpp
src/client/: market.cpp  trading.cpp
src/core/: application.cpp  application.hpp  credentials.cpp  curl_pool.cpp  market.cpp  market.hpp  secret.cpp  token.cpp  token.hpp  trading.cpp  trading.hpp
src/data/: data.cpp
src/secret/: secret.hpp
src/utilities/: cryptography.cpp  http.cpp  json.cpp  json.hpp  openapi.cpp  time.cpp  utilities.cpp  utilities.hpp
